2003-02-05  Peter Stephenson  <pws@csr.com>

	* 18195: Doc/Zsh/builtins.yo Src/builtin.c Src/utils.c
	Src/Modules/zpty.c: Timeouts with `read' via optional numeric
	argument to -t option.

2003-02-04  Peter Stephenson  <pws@csr.com>

	* unposted: 4.1.0-dev-7.

	* 18188: Src/text.c: make output case statements use balanced
	parentheses.

2003-02-03  Peter Stephenson  <pws@csr.com>

	* 18175: Completion/Unix/Command/_p4: Completion for Perforce.

	* 18174: Doc/Zsh/contrib.yo, Functions/Zle/read-from-minibuffer,
	Functions/Zle/replace-string:  New widgets for reading values
	during editing and for performing string and pattern replacements.

2003-01-30  Clint Adams  <clint@zsh.org>

	* unposted: config.guess, config.sub: update to 2003-01-10 and
	2003-01-03 versions, respectively.

	* 18131: zshconfig.ac: find pcre on RedHat.

2003-01-30  Oliver Kiddle  <opk@zsh.org>

	* Doug Kearns: 18159: Completion/Unix/Command/_tidy:
	completion function for HTML Tidy

2003-01-29  Oliver Kiddle  <opk@zsh.org>

	* 18156: Completion/Unix/Type/_email_addresses, Doc/Zsh/compsys.yo:
	use more conventional reply array for plugins, document new styles
	used in _email_addresses and document bashcompinit

	* 18149, 18153: Completion/bashcompinit: new function for
	emulating bash's programmable completion system

2003-01-27  Bart Schaefer  <schaefer@zsh.org>

	* 18144: Src/init.c: no SIGHUP handler if parent was ignoring
	(originally posted in 17989).

	* 18144: Src/prompt.c: allow %{ %} to put bounds around a prompt
	truncation in the intuitive way (originally discussed in 17755).

	* 18144: zshconfig.ac: fix inconsequential typos.

	* 18143: Doc/Zsh/compsys.yo, Doc/Zsh/contrib.yo,
	Functions/Zle/copy-earlier-word, Functions/Zle/predict-on,
	Functions/Zle/smart-insert-last-word: improve cooperation
	between copy-earlier-word and smart-insert-last-word; fix
	some problems with "toggle" style for predict-on; fix doc
	typo in compsys example.

2003-01-27  Peter Stephenson  <pws@csr.com>
